Variable initialization and core concept tests

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
+<script src="text/javascript">
 
-<script src="game.js"></script>
+var theWords = ["Apple", "Banana", "Orange", "kiwi"];
+var  theGameWord = theWords.split([Math.floor(Math.random()* theWords.length)]);
+var theWordDisplay = 
+
+
+</script>
+
+
 </body>
 </html>
