multiple changes. Logic working final styling necessary

--- a/index.html
+++ b/index.html
@@ -2,22 +2,33 @@
 <html>
 <head>
 	<title>Hangman</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+Infant:500i|Cormorant+SC|Creepster" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
 
-<div id="buttons"></div>
+<header  class="page-header header"> 
+<h1>Hangman</h1>
+</header>
 
+<div class="row">
+		<div id="tileRow" class="col-sm-12" style='align-content: center'>
+			<div id="buttons"></div>
+		</div> 
+</div>
 
+<footer class="footer">
+	<div class="container">
+		<P class="muted"></P>
+
+	</div>
+</footer>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-<script type="text/javascript" src:assets/javascript/game.js"> </script>
-
-
+<script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
-
 </html>
-
 
