--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Hangman</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -14,17 +13,17 @@
         <h1>Hangman</h1>
     </header>
     <div class="container">
-        <div class="row">
-            <div id="tileRow" class="col-sm-12" style='align-content: center'>
+            <div id="tileRow" class="col-sm-12">
                 <div id="buttons"></div>
             </div>
-        </div>
     </div>
-    <footer class="footer">
-        <div class="container">
+
+    <div class="container">
+    	<footer class="footer">
+		</footer>
             <P class="muted"></P>
-        </div>
-    </footer>
+     </div>	
+   
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
